# PolyBench-sdfglib-einsum

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.py  check.py  intel.make  opt_c.make  opt_cublas.make  opt_mkl.make  opt_mkl3.make  plot.py  pluto.make  polly.make  ref.make  results.py  run.py
gpu/: polybench.cu  polybench.cuh
include/: benchmarks.h  einsum_pipeline.h  loop_consume_assignments.h  my_loop_distribute.h  optimize.h  polybench_node.h  timer.h
ref/stencils/fdtd-2d/: fdtd-2d.c
sdfg_json/check/datamining/: correlation.json  covariance.json
sdfg_json/check/linear-algebra/blas/: gemm.json  gesummv.json  syrk.json  trmm.json
sdfg_json/check/linear-algebra/kernels/: 2mm.json  3mm.json  mvt.json
sdfg_json/check/linear-algebra/solvers/: durbin.json
sdfg_json/check/medley/: deriche.json
sdfg_json/check/stencils/: adi.json  heat-3d.json  jacobi-2d.json  seidel-2d.json
sdfg_json/linear-algebra/blas/: gemver.json  symm.json  syr2k.json
sdfg_json/linear-algebra/kernels/: atax.json  bicg.json  doitgen.json
sdfg_json/linear-algebra/solvers/: gramschmidt.json  trisolv.json
sdfg_json/run/datamining/: correlation.json  covariance.json
sdfg_json/run/linear-algebra/blas/: gemm.json  gemver.json  gesummv.json  symm.json  syr2k.json  syrk.json  trmm.json
sdfg_json/run/linear-algebra/kernels/: 2mm.json  3mm.json  atax.json  bicg.json  doitgen.json  mvt.json
sdfg_json/run/linear-algebra/solvers/: gramschmidt.json  trisolv.json
sdfg_json/run/medley/: deriche.json
sdfg_json/run/stencils/: adi.json  fdtd-2d.json  heat-3d.json  jacobi-1d.json  jacobi-2d.json  seidel-2d.json
sdfg_json/stencils/: fdtd-2d.json  jacobi-1d.json
src/: benchmarks.cpp  einsum_pipeline.cpp  loop_consume_assignments.cpp  my_loop_distribute.cpp  optimize.cpp  optimize_cublas.cpp  optimize_mkl.cpp  optimize_mkl3.cpp  polybench_node.cpp  timer.cpp
